--- a/views/crm_lead.xml
+++ b/views/crm_lead.xml
@@ -4,20 +4,11 @@
         <field name="model">crm.lead</field>
         <field name="inherit_id" ref="crm.crm_case_form_view_leads"/>
         <field name="arch" type="xml">
-            <field name="partner_id" position="after">
-                <field name="vat"/>
-            </field>
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="opportunity_form_view">
-        <field name="model">crm.lead</field>
-        <field name="inherit_id" ref="crm.crm_case_form_view_oppor"/>
-        <field name="arch" type="xml">
-            <field name="partner_id" position="after">
-                <field name="vat"/>
+            <field name="team_id" position="after">
                 <field name="tamemp"/>
             </field>
         </field>
     </record>
+
+
 </odoo>
