--- a/views/crm_lead.xml
+++ b/views/crm_lead.xml
@@ -10,5 +10,13 @@
         </field>
     </record>
 
-
+    <record model="ir.ui.view" id="opportunity_form_view">
+        <field name="model">crm.lead</field>
+        <field name="inherit_id" ref="crm.crm_case_form_view_oppor"/>
+        <field name="arch" type="xml">
+            <field name="team_id" position="after">
+                <field name="tamemp"/>
+            </field>
+        </field>
+    </record>
 </odoo>
