--- a/views/crm_lead.xml
+++ b/views/crm_lead.xml
@@ -34,6 +34,7 @@
                                         'default_email': email_from,
                                         'default_user_id': user_id, 'default_team_id': team_id, 'default_website': website,
                                         'show_vat': True,
+                                        'default_tamemp': tamemp,
                                     }"
                                 />
                                 <field name="is_blacklisted" invisible="1"/>
